# research

./: .gitignore  README.md
udacity/: README.md
udacity/Artificial Intelligence/AI Programming with Python/Create Your Own Image Classifier/: Image_Classifier_Project.ipynb  README.md  model.py  predict.py  train.py
udacity/Artificial Intelligence/AI Programming with Python/Use a Pre-trained Image Classifier to Identify Dog Breeds/: adjust_results4_isadog.py  adjust_results4_isadog_hints.py  calculates_results_stats.py  calculates_results_stats_hints.py  check_images.py  classify_images.py  classify_images_hints.py  get_input_args.py  get_input_args_hints.py  get_pet_labels.py  get_pet_labels_hints.py  print_results.py  print_results_hints.py
udacity/Artificial Intelligence/Computer Vision/Facial Keypoint Detection/: 1. Load and Visualize Data.html  1. Load and Visualize Data.ipynb  2. Define the Network Architecture.html  2. Define the Network Architecture.ipynb  3. Facial Keypoint Detection, Complete Pipeline.html  3. Facial Keypoint Detection, Complete Pipeline.ipynb  4. Fun with Keypoints.html  4. Fun with Keypoints.ipynb  5. Zip Your Project Files and Submit.html  5. Zip Your Project Files and Submit.ipynb  models.py
udacity/Programming And Development/C++/C++ Capstone Project/: CMakeLists.txt  README.md
udacity/Programming And Development/C++/C++ Capstone Project/src/: controller.cpp  controller.h  game.cpp  game.h  main.cpp  renderer.cpp  renderer.h  scoremanager.cpp  scoremanager.h  snake.cpp  snake.h
(+645 files in other folders)
